# booting-pi

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  booting_pi.c  iops.h  rpi.cmake  vectors.s  video.c  video.h
hardware/: CMakeLists.txt  board.h
